--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -33,6 +33,7 @@ header {
 }
 
 main {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -87,30 +88,6 @@ header a:hover {
   padding: 10px 15px;
 }
 
-.login {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 260px;
-  height: auto;
-  border-radius: 20px;
-  margin-bottom: 100px;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.login form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-  margin: 15px;
-  padding: 15px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 .input {
   display: flex;
   flex-direction: column;
@@ -119,11 +96,11 @@ header a:hover {
 
 .input label {
   text-align: start;
-  font-size: 12pt;
+  font-size: 14pt;
 }
 
 .input input {
-  font-size: 16pt;
+  font-size: 18pt;
   margin: 3px 0px;
   border: none;
   background-color: rgba(126, 126, 126, 0.4);
@@ -131,35 +108,4 @@ header a:hover {
 }
 .input input:hover {
   background-color: rgba(126, 126, 126, 0.7);
-}
-
-.btn input {
-  width: 100px;
-  height: 35px;
-  font-size: 14pt;
-  border: none;
-  border-radius: 20px;
-  background-color: rgba(255, 230, 0, 0.4);
-  color: rgba(255, 255, 255, 0.7);
-}
-.btn input:hover {
-  background-color: rgba(255, 230, 0, 0.7);
-}
-
-#look {
-  padding: 0px;
-  margin-top: 5px;
-}
-
-.error {
-  display: none;
-  color: rgb(255, 0, 0);
-  text-align: center;
-  font-size: 12pt;
-}
-
-.ayuda {
-  display: none;
-  color: rgb(255, 230, 0);
-  font-size: 10pt;
 }
