--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     
     link(rel="stylesheet", href="../public/styles/index.css")
+    link(rel="stylesheet", href=styles)
 
     title=title
   body 
