--- a/public/styles/patient.css
+++ b/public/styles/patient.css
@@ -5,10 +5,23 @@
   align-items: center;
   position: absolute;
   left: 0px;
-  width: auto;
+  width: 230px;
   height: 100%;
   color: rgba(255, 255, 255, 0.7);
   background-color: rgba(0, 0, 0, 0.7);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.patientTable {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  align-items: center;
+  position: absolute;
+  right: 55px;
+  left: 285px;
+  width: auto;
+  height: 90%;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -19,6 +32,8 @@
   align-items: center;
   position: absolute;
   right: 0px;
+  color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   width: auto;
   height: 100%;
   color: rgba(255, 255, 255, 0.7);
@@ -32,6 +47,15 @@ form {
   padding: 15px;
   margin: 0px;
   gap: 30px;
+}
+
+table {
+  width: 780px;
+  height: auto;
+  padding: 10px;
+  border-radius: 20px;
+  color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .register {
