--- a/views/patient.pug
+++ b/views/patient.pug
@@ -6,9 +6,8 @@ block nav
     a(href="http://www.google.com") Perfil
     a(href="http://www.google.com") Otros 
 
-block main 
-  include ./components/patient.form.pug 
-  include ./components/patient.table.pug 
-  include ./components/patient.search.pug 
+block main
+  .cont
+    include ./components/patient.form.pug 
 
 block footer 
