--- a/public/styles/patient.css
+++ b/public/styles/patient.css
@@ -1,77 +1,73 @@
-.cont {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  background-color: rgba(255, 255, 255, 0.7);
-  border-radius: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  box-sizing: border-box;
-  position: relative;
-  height: 90%;
-  width: auto;
-  color: rgba(0, 0, 0, 0.7);
-}
-
-.patientSearch { 
-  display: flex;
-  flex-direction: column; 
-}
-
-.patientTable {
-  display: flex;
-  flex-direction: column;
-  margin: 10px;
-  height: 90% !important;
-}
-
-.formPatient {
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  align-items: center;
-  position: absolute;
-  right: 0px;
-  width: auto;
-  height: 90%;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(0, 0, 0, 0.7);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 form {
   display: flex;
   flex-direction: row;
-  padding: 15px;
+  padding: 0px 15px;
   margin: 0px;
+  height: 100%;
   gap: 30px;
 }
 
-table {
-  width: 780px;
-  height: auto;
-  padding: 10px;
+.search_patient {
+  display: flex;
+  gap: 10px;
+  color: rgba(255, 255, 255, 1);
+  padding: 0px 40px;
+  font-size: 17pt;
+  align-items: center;
+  justify-content: center;
+}
+.search_patient input {
+  width: 125px;
+  outline: none;
+  text-align: center;
+  transition: all 1s;
+  background: transparent;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-color: rgba(255, 255, 255, 1);
+}
+.search_patient input:focus, input:hover {
+  transition: all 1s;
+  border-color: rgb(255, 238, 0);
+  background-color: inherit;
+}
+.search_patient button {
+  color: rgb(255, 238, 0);
+  margin: 0px;
+  padding: 0px;
+  font-size: 17pt;
+  transition: all 1s;
+  background: transparent;
+}
+.search_patient button:hover {
+  color: rgb(255, 238, 0);
+  transition: all 1s;
+  background: transparent;
 }
 
 .register {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 331px;
-  width: 200px;
-  /* gap: 30px; */
+  /* height: 331px; */
+  height: 100%;
+  width: auto;
 }
 
-#register {
-  width: 200px;
-  height: 34px;
-  font-size: 18pt;
-  margin: 23px auto 0px auto;
+button {
+  background-color: rgba(0, 26, 255, 0.8);
+  border-radius: 20px;
+  transition: all 0.5s;
+  margin-top: 30px;
   border: none;
-  background-color: rgba(0, 110, 255, 0.4);
+  height: 35px;
+  width: 200px;
   color: rgba(255, 255, 255, 0.7);
 }
-#register:hover {
-  background-color: rgba(0, 26, 255, 0.7);
+button:hover {
+  background-color: rgba(0, 26, 255, 1);
+  border-radius: 20px;
+  transition: all 0.5s;
   color: rgba(255, 255, 255, 0.9);
 }
