--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,17 +3,22 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width initial-scale=1.0")
-    
+    //- Icono
     link(rel="icon" href="../public/images/logo_unimed.png" type="image/png")
+    //- DataTables
+    link(rel="stylesheet" href="https://cdn.datatables.net/2.3.1/css/dataTables.dataTables.min.css")
+    //- Bootstrap
+    link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css")
+    //- Style Layout
     link(rel="stylesheet" href="../public/styles/index.css")
-    
+    link(rel="stylesheet" href="../public/styles/dinamic.css")
+    //- Other Styles
     each style in styles
       link(rel="stylesheet" href=style)
-
     title=title
   body 
     header
-      block nav
+      block header
       .logo 
         img(
           src="../public/images/logo_unimed.png" 
@@ -22,14 +27,34 @@ html(lang="en")
           height="50px"
         )
         h1 UniMed
-    
     main
-      block main 
-    
+      .the_main
+        block left_main
+        #main.main_center 
+          table(id="myTable" name=name class="table table-striped table-dark") 
+            thead 
+              tr
+                th # 
+                th Nombre 
+                th Apellido 
+                th DNI 
+                th Egreso <!-- Manipular -->
+                th Numero <!-- Manipular -->
+                th eMail <!-- Manipular -->
+                th(colspan="2") 
+            tbody(id="tr_body")
+              tr(id="tr_head") <!-- Borrar -->
+        block main_right
     footer 
       block footer
       .footer 
         p &copy; 2025 MiSitioWeb
-    
+    //- jQuery
+    script(type="module" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer)
+    //- DataTables
+    script(type="module" src="https://cdn.datatables.net/2.3.1/js/dataTables.min.js" defer)
+    //- Bootstrap
+    script(type="module" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer)
+    //- Other Scripts
     each script in scripts
       script(type="module" src=script defer)
