--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,8 +5,6 @@ html(lang="en")
     meta(name="viewport" content="width=device-width initial-scale=1.0")
     //- Icono
     link(rel="icon" href="../public/images/logo_unimed.png" type="image/png")
-    //- DataTables
-    link(rel="stylesheet" href="https://cdn.datatables.net/2.3.1/css/dataTables.dataTables.min.css")
     //- Bootstrap
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css")
     //- Style Layout
@@ -19,19 +17,11 @@ html(lang="en")
   body 
     header
       block header
-      .logo 
-        img(
-          src="../public/images/logo_unimed.png" 
-          alt="logo_unimed" 
-          width="50px" 
-          height="50px"
-        )
-        h1 UniMed
     main
       .the_main
         block left_main
         #main.main_center 
-          table(id="myTable" name=name class="table table-striped table-dark") 
+          table(id="myTable" name=name class="table table-striped table-dark overflow-auto") 
             thead 
               tr
                 th # 
@@ -43,16 +33,17 @@ html(lang="en")
                 th eMail <!-- Manipular -->
                 th(colspan="2") 
             tbody(id="tr_body")
-              tr(id="tr_head") <!-- Borrar -->
         block main_right
+    template(id="my_template")
+      tr
+        td
+          button.update Actualizar
+        td
+          button.delete Eliminar
     footer 
       block footer
       .footer 
         p &copy; 2025 MiSitioWeb
-    //- jQuery
-    script(type="module" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer)
-    //- DataTables
-    script(type="module" src="https://cdn.datatables.net/2.3.1/js/dataTables.min.js" defer)
     //- Bootstrap
     script(type="module" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer)
     //- Other Scripts
