--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,24 +21,29 @@ html(lang="en")
       .the_main
         block left_main
         #main.main_center 
-          table(id="myTable" name=name class="table table-striped table-dark overflow-auto") 
+          table(id="myTable" class="table table-striped table-dark ") 
             thead 
               tr
-                th # 
-                th Nombre 
-                th Apellido 
-                th DNI 
-                th Egreso <!-- Manipular -->
-                th Numero <!-- Manipular -->
-                th eMail <!-- Manipular -->
+                th(style="text-align: center; width: 10px;") #
+                th(style="width: 100px;") Nombre
+                th(style="width: 100px;") Apellido
+                th(style="width: 100px;") DNI
+                th(style="width: 130px;") Egreso
+                th(style="width: 100px;") Contacto
+                th(style="width: 300px;") eMail
                 th(colspan="2") 
             tbody(id="tr_body")
+            tfoot 
+              tr 
+                th(colspan="9") Filtrar por: 
+                  label(for="filter") Pacientes dados de alta
+                  input(type="checkbox" name="filter" id="filter")
         block main_right
     template(id="my_template")
       tr
-        td
+        td(style="width: 85px;")
           button.update Actualizar
-        td
+        td(style="width: 85px;")
           button.delete Eliminar
     footer 
       block footer
